# ai-agent-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  README.md  ion'])  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  decisions.md  observability.md  overview.md  plugins.md  roadmap.md  streaming.md  task-runner.md
examples/: basic_chat.py  lmstudio_run_async.py  lmstudio_stream_async.py  lmstudio_stream_timing.py  lmstudio_stream_visual.py  routed_flow.py  tool_calling.py
examples/plugins/: basic_plugins.py
src/ai_agent_orchestrator/: __init__.py  agent.py  cli.py  llm.py  plugins.py  router.py  streaming.py
src/ai_agent_orchestrator/memory/: __init__.py  base.py  in_memory.py
src/ai_agent_orchestrator/observability/: __init__.py  clock.py  events.py  ids.py
src/ai_agent_orchestrator/protocol/: __init__.py  messages.py  outputs.py
src/ai_agent_orchestrator/tools/: __init__.py  base.py  registry.py
src/ai_agent_orchestrator/utils/: __init__.py  errors.py
src/task_runner_app/: __init__.py  llm.py  main.py
src/task_runner_app/tools/: __init__.py  files.py  sandbox.py  tasks.py
tests/: test_agent_async_parity.py  test_agent_loop.py  test_agent_loop_async.py  test_blocking_tool_async.py  test_e2e_smoke.py  test_fake_llm_streaming.py  test_llm_async_adapter.py  test_lmstudio_client.py  test_observability.py  test_observability_async.py  test_output_parsing.py  test_plugin_example_smoke.py  test_plugins.py  test_router.py  test_streaming.py  test_task_runner_e2e.py  test_task_runner_tools.py  test_tools_registry.py
(+3 files in other folders)
